--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "class-validator": "^0.14.1",
     "express-session": "^1.18.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
